--- a/Todolist9/src/main/resources/application.properties
+++ b/Todolist9/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql:tododb
 spring.datasource.username=todouser
 spring.datasource.password=pass
-spring.messages.basename=i18n/FixedDisplayStrings, i18n/ValidationMessages
+spring.messages.basename=i18n/FixedDisplayStrings, i18n/ValidationMessages, i18n/OperationMessages
 spring.messages.fallback-to-system-locale=false
 
